WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145905
[iOS WK2] Video with reflection crashes WebKit and Safari
https://bugs.webkit.org/show_bug.cgi?id=145905
Summary
[iOS WK2] Video with reflection crashes WebKit and Safari
Simon Fraser (smfr)
Reported
2015-06-11 19:14:04 PDT
[iOS WK2] Video with reflection crashes WebKit and Safari
Attachments
Patch
(2.85 KB, patch)
2015-06-11 19:16 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(2.84 KB, patch)
2015-06-11 19:20 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-06-11 19:16:09 PDT
Created
attachment 254775
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-06-11 19:20:38 PDT
Created
attachment 254776
[details]
Patch
WebKit Commit Bot
Comment 3
2015-06-12 10:05:24 PDT
Comment on
attachment 254776
[details]
Patch Clearing flags on attachment: 254776 Committed
r185511
: <
http://trac.webkit.org/changeset/185511
>
WebKit Commit Bot
Comment 4
2015-06-12 10:05:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug