[iOS WK2] Video with reflection crashes WebKit and Safari https://bugs.webkit.org/show_bug.cgi?id=145905 rdar://problem/18364939

Reviewed by Anders Carlsson.

On iOS, AVPlayerLayers are contained inside a WebVideoContainerLayer, but
the layer type is still LayerTypeAVPlayerLayer.

Avoid throwing exceptions when cloning such layers by checking the layer class.

* WebProcess/WebPage/mac/PlatformCALayerRemoteCustom.mm:
(WebKit::PlatformCALayerRemoteCustom::clone):


Canonical link: https://commits.webkit.org/163976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185511 268f45cc-cd09-0410-ab3c-d52691b4dbfc